Closed Bug 1766537 Opened 3 years ago Closed 2 years ago

fullscreen window resize test doesn't work in headless mode

Categories

(Firefox :: Headless, defect)

defect

Tracking

()

RESOLVED FIXED
102 Branch
Tracking Status
firefox102 --- fixed

People

(Reporter: edgar, Assigned: edgar)

References

Details

Attachments

(1 file)

I think it is because the headless widget doesn't implement exit fullscreen mode while sizemode change.

Component: DOM: Core & HTML → Headless
Product: Core → Firefox
Pushed by echen@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/372866a4707c Exit fullscreen when sizemode change in headless mode; r=cmartin
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 102 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: