Bug 1766537 - Exit fullscreen when sizemode change in headless mode; r=cmartin

Differential Revision: https://phabricator.services.mozilla.com/D144807